LIN-4561/LIN-4585 Fix loss of focus when entering a value in a table (UITableComponent) and pressing tab
Change-Id: Ie003e3ef55638b40e2849de0c641eadb5e2b1800